# atlas

./: .gitignore  CLAUDE.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
atlas-lite/: README.md  atlas_lite.py  pyproject.toml
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 003_add_role_and_audit_log.py  004_add_usage_events.py  005_add_app_settings.py  496ff80a111a_add_user_configurations.py  71bef503e77c_initial_schema.py
backend/src/atlas/: __init__.py  config.py
backend/src/atlas/adapters/: __init__.py
backend/src/atlas/adapters/auth/: __init__.py  jwt_auth_service.py
backend/src/atlas/adapters/authentication/: __init__.py  exceptions.py  interface.py  jwt.py
backend/src/atlas/adapters/authorization/: __init__.py  exceptions.py  interface.py  permissive.py  rbac.py
backend/src/atlas/adapters/catalog/: __init__.py  exceptions.py  github.py  in_memory.py  interface.py
backend/src/atlas/adapters/email/: __init__.py  console.py  console_email_service.py  exceptions.py  interface.py  smtp.py  smtp_email_service.py
backend/src/atlas/adapters/github/: __init__.py  content_repository.py
backend/src/atlas/adapters/in_memory/: __init__.py  content_repository.py
backend/src/atlas/adapters/in_memory/repositories/: __init__.py  catalog_repository.py  configuration_repository.py  team_repository.py  user_repository.py
backend/src/atlas/adapters/postgresql/: __init__.py  converters.py  models.py  repository.py  session.py
backend/src/atlas/adapters/postgresql/repositories/: __init__.py  catalog_repository.py  configuration_repository.py  team_repository.py  user_repository.py
backend/src/atlas/adapters/repository/: __init__.py  encryption.py  exceptions.py  interface.py  models.py  postgresql.py  session.py
backend/src/atlas/adapters/sync/: __init__.py  git_catalog_sync.py
backend/src/atlas/application/: __init__.py
backend/src/atlas/application/services/: __init__.py  atlas_service.py  configuration_service.py  user_profile_service.py
backend/src/atlas/domain/: __init__.py
backend/src/atlas/domain/entities/: __init__.py  audit_log.py  catalog_item.py  effective_configuration.py  team.py  usage_event.py  user.py  user_configuration.py
backend/src/atlas/domain/errors/: __init__.py  domain_errors.py
backend/src/atlas/domain/interfaces/: __init__.py  auth_service.py  authorization.py  catalog_repository.py  configuration_repository.py  content_repository.py  email_service.py  repository.py  sync_service.py  team_repository.py  user_repository.py
backend/src/atlas/domain/value_objects/: __init__.py  email.py  password.py
backend/src/atlas/entrypoints/: __init__.py  app.py  dependencies.py
backend/src/atlas/entrypoints/api/: __init__.py
backend/src/atlas/entrypoints/api/routes/: __init__.py  admin_analytics.py  admin_audit.py  admin_settings.py  admin_teams.py  admin_users.py  auth.py  catalog.py  configuration.py  profile.py  sync.py  webhooks.py
backend/tests/: test_catalog_routes.py
cli/: README.md  pyproject.toml
cli/src/atlas_cli/: __init__.py  config.py  console.py  main.py
cli/src/atlas_cli/api/: __init__.py  auth.py  client.py
cli/src/atlas_cli/commands/: __init__.py  auth.py  doctor.py  pull.py  push.py  status.py  sync.py
cli/src/atlas_cli/storage/: __init__.py  credentials.py  files.py
cli/tests/: __init__.py  test_commands.py  test_storage.py
(+181 files in other folders)
